[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["fstermann-cai <fabian.stermann@convalid-ai.de>"]
readme = "README.md"
packages = [{ include = "aoc" }]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
